--- a/direwolf/app/views/admins/_form.html.erb
+++ b/direwolf/app/views/admins/_form.html.erb
@@ -21,7 +21,17 @@
         <div class="field">
           <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
           <div class="col-md-4">
-            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name", value: current_user.name %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :email, "Email Address:", class: "col-md-4 control-label", for: "email" %>
+          <div class="col-md-4">
+            <%= f.text_field :email , class: "form-control input-md", placeholder: "chicken_nuggets@example.com" %>
           </div>
         </div>
       </div>
