--- a/direwolf/app/views/employers/_form.html.erb
+++ b/direwolf/app/views/employers/_form.html.erb
@@ -21,7 +21,27 @@
         <div class="field">
           <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
           <div class="col-md-4">
-            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name", value: current_user.name %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :company_name, "Company Name:", class: "col-md-4 control-label", for: "name" %>
+          <div class="col-md-4">
+            <%= f.text_field :company_name , class: "form-control input-md", placeholder: "Company Inc." %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :email, "Email Address:", class: "col-md-4 control-label", for: "email" %>
+          <div class="col-md-4">
+            <%= f.text_field :email , class: "form-control input-md", placeholder: "chicken_nuggets@example.com" %>
           </div>
         </div>
       </div>
