--- a/direwolf/app/views/seekers/_form.html.erb
+++ b/direwolf/app/views/seekers/_form.html.erb
@@ -14,12 +14,54 @@
   <form class="form-horizontal">
     <fieldset>
       <legend><%= title %></legend>
+
       <!-- Text input-->
       <div class="form-group">
         <div class="field">
           <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
           <div class="col-md-4">
-            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name" %>
+            <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name", value: current_user.name %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :email, "Email:", class: "col-md-4 control-label", for: "email" %>
+          <div class="col-md-4">
+            <%= f.text_field :email , class: "form-control input-md", placeholder: "email@domain.com" %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :phone, "Phone:", class: "col-md-4 control-label", for: "phone" %>
+          <div class="col-md-4">
+            <%= f.text_field :phone , class: "form-control input-md", placeholder: "1234567890" %>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :skills, "Phone:", class: "col-md-4 control-label", for: "skills" %>
+          <div class="col-md-4">
+            <%= f.text_field :skill_list , class: "form-control input-md", placeholder: "C++, Ruby, Ruby on Rails" %>
+            <span class="help-block">Comma Separated List of Tags</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text input-->
+      <div class="form-group">
+        <div class="field">
+          <%= f.label :resume, "Resume:", class: "col-md-4 control-label", for: "resume" %>
+          <div class="col-md-4">
+            <%= f.text_area :resume , class: "form-control input-md", rows: "10", placeholder: "Paste your resume here." %>
           </div>
         </div>
       </div>
