--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -1,43 +1,50 @@
-<div class="col-md-4">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h3 class="panel-title">Profile</h3>
-    </div>
-    <table class="table table-striped">
-      <tbody>
-      <tr>
-        <td>Name:</td>
-        <td>Yinglei Zhang</td>
-      </tr>
-      <tr>
-        <td>Email:</td>
-        <td>yzhang44@ncsu.edu</td>
-      </tr>
-      <tr>
-        <td>Phone Number:</td>
-        <td>9198008547</td>
-      </tr>
-      <tr>
-        <td>Skills:</td>
-        <td>Ruby on Rails</td>
-      </tr>
-      <tr>
-        <td>Resume:</td>
-        <td>Plaintext</td>
-      </tr>
-      <tr>
-        <td>
-        <div class="btn-group">
-          <%- #<button type="button" class="btn btn-success">Edit Profile</button> %>
-          <%= link_to "Create Profile",profiles_path, class: "btn btn-primary" %>
-          <td>
-          <%= link_to "Edit Profile",profiles_path, class: "btn btn-primary" %>
-          </td>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%=@seeker.name%></h3>
+      </div>
+      <div class="panel-body">
+        <%if @seeker%>
+          <form class="form-horizontal" role="form">
+
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Email:</label>
+              <div class="col-sm-10">
+                <p class="form-control-static"><%= @seeker.email %></p>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Phone:</label>
+              <div class="col-sm-10">
+                <p class="form-control-static"><%= @seeker.phone %></p>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Skills:</label>
+              <div class="col-sm-10">
+                <p class="form-control-static">
+                  <% @seeker.skill_list.each do |skill|%>
+                    <span class="label label-success"><%= skill %></span>
+                  <%end%>
+                </p>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Resume:</label>
+              <div class="col-sm-10">
+                <p class="form-control-static"><%= @seeker.resume %></p>
+              </div>
+            </div>
+
+          </form>
+          <%= link_to "Edit Profile",seekers_path, class: "col-md-offset-4 col-md-4 btn btn-primary" %>
         </div>
-        <td>
-      </tr>
-      </tbody>
-    </table>
+        <%end%>
+    </div>
   </div>
 </div>
 
