--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -1,50 +1,40 @@
-<div class="row">
-  <div class="col-md-offset-3 col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%=@seeker.name%></h3>
-      </div>
-      <div class="panel-body">
-        <%if @seeker%>
-          <form class="form-horizontal" role="form">
-
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Email:</label>
-              <div class="col-sm-10">
-                <p class="form-control-static"><%= @seeker.email %></p>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Phone:</label>
-              <div class="col-sm-10">
-                <p class="form-control-static"><%= @seeker.phone %></p>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Skills:</label>
-              <div class="col-sm-10">
-                <p class="form-control-static">
-                  <% @seeker.skill_list.each do |skill|%>
-                    <span class="label label-success"><%= skill %></span>
-                  <%end%>
-                </p>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Resume:</label>
-              <div class="col-sm-10">
-                <p class="form-control-static"><%= @seeker.resume %></p>
-              </div>
-            </div>
-
-          </form>
-          <%= link_to "Edit Profile",seekers_path, class: "col-md-offset-4 col-md-4 btn btn-primary" %>
-        </div>
-        <%end%>
+<div class="col-md-4">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title"><%=@seeker.name%>'s Profile</h3>
     </div>
+    <div class="panel-body">
+      <%if @seeker%>
+        <form class="form" role="form">
+
+          <div class="form-group">
+            <label class="control-label">Email:</label>
+            <p class="form-control-static"><%= @seeker.email %></p>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label">Phone:</label>
+            <p class="form-control-static"><%= @seeker.phone %></p>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label">Skills:</label>
+            <p class="form-control-static">
+              <% @seeker.skill_list.each do |skill|%>
+                <span class="label label-success"><%= skill %></span>
+              <%end%>
+            </p>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label">Resume:</label>
+            <p class="form-control-static"><%= @seeker.resume %></p>
+          </div>
+
+        </form>
+        <%= link_to "Edit Profile",seekers_path, class: "col-md-offset-4 col-md-4 btn btn-primary" %>
+      </div>
+      <%end%>
   </div>
 </div>
 
