Tagging for jobs and seekers. Seekers can now edit profile

--- a/direwolf/app/views/seekers/edit.html.erb
+++ b/direwolf/app/views/seekers/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing seeker</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @seeker %> |
-<%= link_to 'Back', seekers_path %>
+<%= render 'form', title: "Edit Profile" %>
