--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -32,7 +32,7 @@
           </div>
 
         </form>
-        <%= link_to "Edit Profile",seekers_path, class: "col-md-offset-4 col-md-4 btn btn-primary" %>
+        <%= link_to "Edit Profile", edit_seeker_path(@seeker.id), class: "col-md-offset-4 col-md-4 btn btn-primary" %>
       </div>
       <%end%>
   </div>
