Phone -> Skills for seeker

--- a/direwolf/app/views/seekers/_form.html.erb
+++ b/direwolf/app/views/seekers/_form.html.erb
@@ -48,10 +48,10 @@
       <!-- Text input-->
       <div class="form-group">
         <div class="field">
-          <%= f.label :skills, "Phone:", class: "col-md-4 control-label", for: "skills" %>
+          <%= f.label :skills, "Skills:", class: "col-md-4 control-label", for: "skills" %>
           <div class="col-md-4">
             <%= f.text_field :skill_list , class: "form-control input-md", placeholder: "C++, Ruby, Ruby on Rails" %>
-            <span class="help-block">Comma Separated List of Tags</span>
+            <span class="help-block">Comma Separated List of Skils</span>
           </div>
         </div>
       </div>
