--- a/direwolf/app/views/employers/edit.html.erb
+++ b/direwolf/app/views/employers/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing employer</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @employer %> |
-<%= link_to 'Back', employers_path %>
+<%= render 'form', :title => "Edit Admin Page" %>
