--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -69,7 +69,7 @@
       <tr></tr>
       <tr>
         <div class="alert alert-danger" role="alert">
-          You haven't applied for any jobs..
+          You haven't applied for any jobs.
         </div>
       </tr>
       <% end %>
