Adding search feature

--- a/direwolf/app/views/category/index.html.erb
+++ b/direwolf/app/views/category/index.html.erb
@@ -34,7 +34,7 @@
             <!-- Button -->
             <div class="form-group">
               <div class="col-md-4 pull-right">
-                <%= f.submit "Add Category", class: "btn btn-default btn-primary" %>
+                <%= f.submit "Add Category", class: "btn btn-primary" %>
               </div>
             </div>
 
