--- a/direwolf/app/views/jobs/index.html.erb
+++ b/direwolf/app/views/jobs/index.html.erb
@@ -30,13 +30,7 @@
                 <%= @jobs[job].title %>
               </td>
               <td class="col-md-5">
-                <div class="btn-group">
-                  <%= link_to "Show", job_path(@jobs[job].id), class: "btn btn-primary" %>
-                  <% if @user_type == :employer %>
-                    <%= link_to "Edit", edit_job_path(@jobs[job].id), class: "btn btn-success" %>
-                    <%= link_to "Delete", job_path(@jobs[job].id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-                  <% end %>
-                </div>
+                <%= link_to "Show", job_path(@jobs[job].id), class: "btn btn-primary pull-right" %>
               </td>
             </tr>
           <% end %>
