update admin and employer profile page

--- a/direwolf/app/views/admins/_form.html.erb
+++ b/direwolf/app/views/admins/_form.html.erb
@@ -13,9 +13,9 @@
 
   <form class="form-horizontal">
     <fieldset>
-
+      <%if false%>
       <legend><%= title %></legend>
-
+      <%end%>
       <!-- Text input-->
       <div class="form-group">
         <div class="field">
