--- a/direwolf/app/views/employers/_form.html.erb
+++ b/direwolf/app/views/employers/_form.html.erb
@@ -19,7 +19,7 @@
       <!-- Text input-->
       <div class="form-group">
         <div class="field">
-          <%= f.label :name, "Name:", class: "col-md-4 control-label", for: "name" %>
+          <%= f.label :name, "Name of Contact:", class: "col-md-4 control-label", for: "name" %>
           <div class="col-md-4">
             <%= f.text_field :name , class: "form-control input-md", placeholder: "Full Name", value: current_user.name %>
           </div>
