--- a/direwolf/app/views/jobs/index.html.erb
+++ b/direwolf/app/views/jobs/index.html.erb
@@ -26,10 +26,14 @@
               <td class="col-md-1">
                 <%= job + 1 %>
               </td>
-              <td class="col-md-6">
+              <td class="col-md-10">
                 <%= @jobs[job].title %>
+                <br/>
+                <% @jobs[job].tag_list.each do |tag|%>
+                  <span class="label label-danger"><%= tag %></span>
+                <%end%>
               </td>
-              <td class="col-md-5">
+              <td class="col-md-1">
                 <%= link_to "Show", job_path(@jobs[job].id), class: "btn btn-primary pull-right" %>
               </td>
             </tr>
