add withdraw function to the seeker's page

--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -66,6 +66,11 @@
                 <td>
                   <%@job_applications[x].status_id%>
                 </td>
+                <td>
+                  <div class="btn-group">
+                    <%= link_to 'Withdraw', @job_applications[x], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                  </div>
+                </td>
               </tr>
           <% end %>
       <%else%>
